# dorie

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
cookbook/: Intent_Detection_LoRA.ipynb  PnC_Intent_Fine_Tuning_RoBERTa.ipynb  README.md
docs/mlflow/: experiments.json
docs/static/css/: mlflow_docs.css
docs/static/img/: README.md
docs/static/js/: mlflow_docs.js
libs/dorie/: README.md  framework.py  hf_management.sh  virtualenv.sh
libs/dorie/intent/: __init__.py  finetune.py
libs/dorie/intent/config/: roberta-config.json
libs/dorie/intent/samples/: personal-auto-insurance-intents.csv
libs/dorie/loader/: README.md  __init__.py  adaptation.py  config.json  datatokenizer.py  transformer.py
libs/dorie/tests/: __init__.py  data.py
libs/dorie/tests/unit_tests/examples/: sentimate-data.csv
libs/dorie/tests/unit_tests/loader/: __init__.py  test_imports.py  test_loader.py
libs/experimental/: README.md
libs/experimental/storage/: dump.py  s3_connection.py
libs/experimental/synthetic_data/: base.py  prompts.py
utils/: cli.py
